--- a/Proy1/web/index.html
+++ b/Proy1/web/index.html
@@ -13,5 +13,7 @@ and open the template in the editor.
     <body>
         <div>TODO write content</div>
         <div> <p>Estos es un parrafo</p></div>
+        <div> <p>Estos es un parrafo2</p></div>
+        <div> <p>Estos es un parrafo3</p></div>
     </body>
 </html>
