--- a/Proy1/web/index.html
+++ b/Proy1/web/index.html
@@ -15,5 +15,6 @@ and open the template in the editor.
         <div> <p>Estos es un parrafo</p></div>
         <div> <p>Estos es un parrafo2</p></div>
         <div> <p>Estos es un parrafo3</p></div>
+        <div> <p>Pa probar</p></div>
     </body>
 </html>
