--- a/Proy1/web/index.html
+++ b/Proy1/web/index.html
@@ -19,6 +19,7 @@ and open the template in the editor.
         <div> <p>Estos es un parrafo4</p></div>
         <div> <p> OTRA WEA </p> </div>
         sdfadfadsf
+         <div> <p> OTRA WEA 2</p> </div>
 
     </body>
 </html>
